add submit to spreadsheet

--- a/views/add-contact.ejs
+++ b/views/add-contact.ejs
@@ -11,7 +11,7 @@
         </ul>
       </div>
       <% } %>
-      <form method="POST" action="/contact">
+      <form method="POST" action="/contact" name="submit-to-google-sheet">
         <div class="mb-3">
           <label for="nama" class="form-label">Nama</label>
           <input
