--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,14 +1,23 @@
 <div class="container mt-4">
   <div class="row">
-    <div class="col text-center">
-        <img src="img/noel.jpg" class="img-thumbnail rounded-circle" alt="NOEL DAAAA" width="200" height="200">
-      <h1 class="display-4">RAJA IBLIS</h1>
-      <p class="lead">Pelajar | No-life for life</p>
-      <form name="submit-to-google-sheet">
-        <label for="email">email</label>
-        <input type="email" id="email" name="email">
-        <label for="pesan">pesan</label>
-        <input type="text" id="pesan" name="pesan">
+    <div class="col">
+      <div class="d-flex mb-5">
+        <img src="img/noel.jpg" class="me-4 img-thumbnail rounded-3" alt="NOEL DAAAA" width="200" height="200">
+        <div class="col">
+          <h1 class="display-4">RAJA IBLIS</h1>
+          <p class="lead mb-5">Pelajar | No-life for life</p>
+        </div>
+      </div>
+    <h2 class="mb-4">Say Something</h2>
+      <form name="submit-to-google-sheet" class="col col-md-6 align-self-center">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email address</label>
+          <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+          <textarea class="form-control" name="pesan" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
         <button type="submit">Send</button>
       </form>
     </div>
