--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 <% } else { %>
 <ul>
   <% siswa.forEach(e => { %>
-  <li>nama : <%= e.nama %></li>
+  <li><%= e.nama %></li>
   <% }) %>
 </ul>
 <% } %>
