--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,8 +11,8 @@
     <h2 class="mb-4">Say Something</h2>
       <form name="submit-to-google-sheet" class="col col-md-6 align-self-center">
         <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Email address</label>
-          <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="name@example.com">
+          <label for="exampleFormControlInput1" class="form-label">Nama</label>
+          <input type="nama" class="form-control" name="nama" id="exampleFormControlInput1" placeholder="Arlan Giri">
         </div>
         <div class="mb-3">
           <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
